--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <i class="fas fa-location-dot business-icon"></i>
                     </div>
                     <h3>Our Legacy</h3>
-                    <p>Established as a landmark in Iloilo, our restaurant continues to be a go-to destination for locals and tourists alike, seeking the true taste of Ilonggo heritage.</p>
+                    <p>Established as a landmark in Bacolod, our restaurant continues to be a go-to destination for locals and tourists alike, seeking the true taste of Ilonggo heritage.</p>
                 </div>
                 <div class="business-item" data-aos="fade-up" data-aos-delay="400">
                     <div class="business-icon-wrapper">
