--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="hero-content">
             <h1>Eron's Cansi</h1>
             <p class="subtitle">The Heartwarming Soul of Ilonggo Cuisine</p>
-            <p class="description">A rich, flavorful beef soup that tells the story of Iloilo's culinary soul. Experience a unique and comforting dish loved by generations.</p>
+            <p class="description">A rich, flavorful beef soup that tells the story of Bacolod's culinary soul. Experience a unique and comforting dish loved by generations.</p>
             <a href="#recipe" class="cta-button">Discover the Flavor</a>
         </div>
     </section>
