--- a/index.html
+++ b/index.html
@@ -373,15 +373,17 @@
         </div>
     </section>
 
-    <section id="contact" class="section contact-section">
-        <div class="container" data-aos="fade-in" data-aos-duration="1500">
-            <div class="contact-card">
-                <h2>Visit Us Today</h2>
-                <p>Experience the heartwarming soul of Ilonggo cuisine for yourself. We look forward to welcoming you.</p>
-                <a href="https://maps.google.com" target="_blank" class="cta-button">Get Directions</a>
-            </div>
+    <section id="contact" class="parallax-section contact-section" data-parallax-speed="0.3">
+    <div class="parallax-bg img3" style="background-image: url('cansi2.jpg');"></div>
+    <div class="container" data-aos="fade-in" data-aos-duration="1500">
+        <div class="contact-card">
+            <h2>Visit Us Today</h2>
+            <p>Experience the heartwarming soul of Ilonggo cuisine for yourself. We look forward to welcoming you.</p>
+            <a href="https://maps.google.com" target="_blank" class="cta-button">Get Directions</a>
         </div>
-    </section>
+    </div>
+</section>
+
     
     <footer class="footer">
         <div class="container">
