--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Eron's Cansi: A Culinary & Economic Journey</title>
 
-  <!-- Fonts & Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <!-- Site CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -53,12 +50,15 @@
   <section id="about-cansi" class="section">
     <div class="container" data-aos="fade-up">
       <h2 class="section-title">About Cansi: Origin and Culture</h2>
-      <p>
-        Originating from a culinary innovation, Cansi is a unique blend of the savory beef soup known as
-        <strong>Bulalo</strong> and the sour broth of <strong>Sinigang</strong>. What gives it its distinct taste is the
-        use of the <strong>batuan fruit</strong>, a local souring agent native to the Negros and Panay islands. This unique combination and its reliance on a local ingredient have made Cansi a powerful symbol of Ilonggo culinary identity and a point of pride for the region. Over the years, the popularity of Cansi has turned it from a local delicacy into a thriving business, with numerous "Cansihan" restaurants competing to offer the most authentic and beloved version.
-      </p>
-
+      <div class="history-content">
+        <p>
+          Cansi is a unique culinary innovation that blends the savory beef soup known as <strong>Bulalo</strong> with the sour broth of <strong>Sinigang</strong>. Its distinct, tangy taste comes from the use of the <strong>batuan fruit</strong>, a local souring agent native to Negros Island.
+        </p>
+        <p>
+          The presence of the batuan fruit is strong evidence that Cansi originated in the Negros region. It is not from the Panay islands, as many people from Iloilo have noted the difference in flavor compared to their own cooking. This unique combination and its reliance on a local ingredient have made Cansi a powerful symbol of Ilonggo culinary identity and a point of pride for the region.
+        </p>
+      </div>
+      
       <div class="culture-cards-container">
         <div class="culture-card">
           <div class="card-front">
@@ -99,47 +99,59 @@
   <section id="the-business" class="section business-report-section">
     <div class="container" data-aos="fade-up">
       <h2 class="section-title">Eron's Cansihan: A Business Report</h2>
-
-      <h3>1. About the Business</h3>
-      <p>Eron's Cansihan is a long-standing restaurant in the "old 'Shopping' district" of Bacolod, known as the "Cansi capital." The restaurant has been a local staple for a very long time, with its recipe passed down and perfected over the years.</p>
-
-      <h4>Popular Dishes and Busiest Times</h4>
-      <p>The most popular dish is the <strong>Beef Cansi</strong>, described as a unique mix of <em>bulalo</em> and <em>sinigang</em>. The restaurant also offers other Filipino favorites through a <em>turo-turo</em> style counter, including a highly-praised chicken inasal.</p>
-      <p>The restaurant is busiest during the morning and lunchtime, opening as early as 7 AM and closing as late as 9 PM.</p>
-
-      <h3>2. The Business Model</h3>
-      <div class="cards-container business-grid">
-        <div class="card business-item" data-aos="zoom-in-up">
-          <div class="card-icon-wrapper"><i class="fas fa-store card-icon"></i></div>
-          <h3>Value Proposition</h3>
-          <p>Focuses on high-quality, authentic Cansi prepared with traditional methods and fresh, local ingredients.</p>
-        </div>
-        <div class="card business-item" data-aos="zoom-in-up" data-aos-delay="200">
-          <div class="card-icon-wrapper"><i class="fas fa-users card-icon"></i></div>
-          <h3>Customer Segments</h3>
-          <p>Caters to local families, tourists seeking authentic Ilonggo cuisine, and professionals looking for a quick, delicious meal.</p>
-        </div>
-        <div class="card business-item" data-aos="zoom-in-up" data-aos-delay="400">
-          <div class="card-icon-wrapper"><i class="fas fa-star-of-life card-icon"></i></div>
-          <h3>Key Resources</h3>
-          <p>Access to fresh batuan fruit, a skilled culinary team, a welcoming restaurant ambiance, and a strong local reputation.</p>
-        </div>
-        <div class="card business-item" data-aos="zoom-in-up" data-aos-delay="600">
-          <div class="card-icon-wrapper"><i class="fas fa-cash-register card-icon"></i></div>
-          <h3>Revenue Streams</h3>
-          <p>Primarily from dine-in sales, but also through food delivery services, catering for events, and pre-packaged meal kits.</p>
-        </div>
-        <div class="card business-item" data-aos="zoom-in-up" data-aos-delay="800">
-          <div class="card-icon-wrapper"><i class="fas fa-handshake card-icon"></i></div>
-          <h3>Partnerships</h3>
-          <p>Collaborating with local farmers, community organizations, and food bloggers to expand reach and reinforce brand authenticity.</p>
-        </div>
-        <div class="card business-item" data-aos="zoom-in-up" data-aos-delay="1000">
-          <div class="card-icon-wrapper"><i class="fas fa-chart-line card-icon"></i></div>
-          <h3>Marketing Channels</h3>
-          <p>Utilizing social media, local print advertisements, and word-of-mouth promotion to attract and retain customers.</p>
-        </div>
+      <div class="history-content">
+        <h3>Our Journey Since 2015</h3>
+        <p>Eron's Cansi officially opened its doors on <strong>January 9, 2015</strong>, with a mission to serve the most authentic Cansi in Bacolod City. From its humble beginnings, the business has grown into a culinary landmark, driven by a commitment to quality and a deep passion for Ilonggo cuisine.</p>
       </div>
+
+     <h3>2. Business Strategies & Financials</h3>
+<div class="insights-grid">
+  <div class="insight-card" data-aos="zoom-in-up">
+      <i class="fas fa-chart-bar insight-icon"></i>
+      <h4>Net Revenue</h4>
+      <p>The business generates approximately <strong>$1 Million in net revenue annually</strong>, reflecting its strong customer base and consistent demand.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="200">
+      <i class="fas fa-store insight-icon"></i>
+      <h4>Operational Strategy</h4>
+      <p>A consistent daily supply of fresh meat is maintained from the <strong>Libertad and Burgos markets</strong> to ensure the highest quality. This strategy focuses on a fast turnover, as meat stored in the freezer loses its ideal taste.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="400">
+      <i class="fas fa-cloud-rain insight-icon"></i>
+      <h4>Market Demand</h4>
+      <p>The business experiences a notable surge in demand during rainy weather, with customers seeking the comforting, hot soup, leading to an on-demand business pattern.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="600">
+      <i class="fas fa-star insight-icon"></i>
+      <h4>Product Philosophy</h4>
+      <p>The core philosophy is to use organic ingredients, minimize MSG, and cook with passion to bring out the natural, rich flavor of the Cansi.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="800">
+      <i class="fas fa-bullhorn insight-icon"></i>
+      <h4>Marketing Strategy</h4>
+      <p>The primary advertising strategy is to <strong>entertain and attract</strong>, leveraging partnerships with food vloggers and influencers on social media platforms to expand reach and showcase authentic Ilonggo cuisine.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1000">
+      <i class="fas fa-trophy insight-icon"></i>
+      <h4>Competitive Advantage</h4>
+      <p>Eron’s Cansi stands out for its <strong>authentic recipe, batuan-based sourness</strong>, generous servings, and reputation as one of Bacolod’s most trusted Cansi houses.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1200">
+      <i class="fas fa-wifi insight-icon"></i>
+      <h4>Digital Presence</h4>
+      <p>Active on <strong>Facebook, TikTok, and Instagram</strong>, Eron’s Cansi engages with customers through food videos, behind-the-scenes cooking content, and promotional campaigns.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1400">
+      <i class="fas fa-microchip insight-icon"></i>
+      <h4>Technology & Innovation</h4>
+      <p>The restaurant is developing a <strong>microwaveable Cansi product</strong>, which will feature the meat and soup packaged separately to maintain freshness and quality.</p>
+  </div>
+  <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1600">
+      <i class="fas fa-users insight-icon"></i>
+      <h4>Community & Cultural Impact</h4>
+      <p>The restaurant supports <strong>local farmers</strong>, preserves Ilonggo heritage, and serves as a culinary landmark that connects Bacolod’s culture with its people.</p>
+  </div>
+</div><br><br><br><br><br>
 
       <h2 class="section-title">Customer Reviews and Insights</h2>
 <div class="feedback-grid">
@@ -170,6 +182,18 @@
 </div>
     </div>
   </section>
+  
+  <section class="product-gallery">
+  <div class="slideshow-container">
+    <div class="slide" style="background-image: url('1.jpg');"></div>
+    <div class="slide" style="background-image: url('2.jpg');"></div>
+    <div class="slide" style="background-image: url('3.jpg');"></div>
+  </div>
+
+  <div class="gallery-content" data-aos="fade-up">
+    <h2 style="color: #E2A76F" class="section-title">Taste Through Pictures</h2>
+  </div>
+</section><br><br><br>
 
   <section id="recipe" class="recipe-section parallax-section">
     <div class="parallax-bg img2" style="background-image: url('cansi1.jpg');"></div>
@@ -260,7 +284,7 @@
       <div class="contact-content">
         <div class="contact-card">
           <h2 style="color: #E2A76F">Visit Us Today</h2>
-          <p>Experience the heartwarming soul of Ilonggo cuisine for yourself. We look forward to welcoming you.</p>
+          <p>Experience the heartwarming soul of Ilonggo</p>      <p></p>cuisine for yourself. We look forward to welcoming you.</p>
           <div class="contact-details">
             <p><i class="fas fa-map-marker-alt"></i> Bacolod City, Western Visayas</p>
             <p><i class="fas fa-envelope"></i> info@eronscansi.ph</p>
@@ -307,7 +331,6 @@
     <i class="fas fa-arrow-up"></i>
   </button>
 
-  <!-- AOS + Site JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
