--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="insight-card" data-aos="zoom-in-up">
       <i class="fas fa-chart-bar insight-icon"></i>
       <h4>Net Revenue</h4>
-      <p>The business generates approximately <strong>$1 Million in net revenue annually</strong>, reflecting its strong customer base and consistent demand.</p>
+      <p>The business generates approximately <strong>Php 1 Million in net revenue annually</strong>, reflecting its strong customer base and consistent demand.</p>
   </div>
   <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="200">
       <i class="fas fa-store insight-icon"></i>
