--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           Cansi is a unique culinary innovation that blends the savory beef soup known as <strong>Bulalo</strong> with the sour broth of <strong>Sinigang</strong>. Its distinct, tangy taste comes from the use of the <strong>batuan fruit</strong>, a local souring agent native to Negros Island.
         </p>
         <p>
-          The presence of the batuan fruit is strong evidence that Cansi originated in the Negros region. It is not from the Panay islands, as many people from Iloilo have noted the difference in flavor compared to their own cooking. This unique combination and its reliance on a local ingredient have made Cansi a powerful symbol of Ilonggo culinary identity and a point of pride for the region.
+          The presence of the batuan fruit is strong evidence that Cansi originated in the Negros region. It is not from the Panay islands, as many people from Iloilo have noted the difference in flavor compared to their own cooking. This unique combination and its reliance on a local ingredient have made Cansi a powerful symbol of Negrosanon's culinary identity and a point of pride for the region.
         </p>
       </div>
       
@@ -78,7 +78,7 @@
             <p>The use of the local "batuan" fruit makes Cansi a proud symbol of Western Visayan identity.</p>
           </div>
           <div class="card-back">
-            <p>The distinct tangy flavor from the batuan fruit is a hallmark of Ilonggo cuisine, making Cansi a unique representation of the region's produce and culinary creativity.</p>
+            <p>The distinct tangy flavor from the batuan fruit is a hallmark of Negrosanon's cuisine, making Cansi a unique representation of the region's produce and culinary creativity.</p>
           </div>
         </div>
 
@@ -86,7 +86,7 @@
           <div class="card-front">
             <i class="fas fa-hands-helping culture-icon"></i>
             <h3>A Source of Comfort</h3>
-            <p>Known for its rich, soothing broth, Cansi is the ultimate comfort food for many Ilonggos.</p>
+            <p>Known for its rich, soothing broth, Cansi is the ultimate comfort food for many Negrosanon'ss.</p>
           </div>
           <div class="card-back">
             <p>Whether enjoyed on a rainy day or shared with loved ones, Cansi provides a sense of warmth and comfort that is deeply ingrained in the local culture.</p>
@@ -101,7 +101,7 @@
       <h2 class="section-title">Eron's Cansihan: A Business Report</h2>
       <div class="history-content">
         <h3>Our Journey Since 2015</h3>
-        <p>Eron's Cansi officially opened its doors on <strong>January 9, 2015</strong>, with a mission to serve the most authentic Cansi in Bacolod City. From its humble beginnings, the business has grown into a culinary landmark, driven by a commitment to quality and a deep passion for Ilonggo cuisine.</p>
+        <p>Eron's Cansi officially opened its doors on <strong>January 9, 2015</strong>, with a mission to serve the most authentic Cansi in Bacolod City. From its humble beginnings, the business has grown into a culinary landmark, driven by a commitment to quality and a deep passion for Negrosanon's cuisine.</p>
       </div>
 
      <h3>2. Business Strategies & Financials</h3>
@@ -129,7 +129,7 @@
   <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="800">
       <i class="fas fa-bullhorn insight-icon"></i>
       <h4>Marketing Strategy</h4>
-      <p>The primary advertising strategy is to <strong>entertain and attract</strong>, leveraging partnerships with food vloggers and influencers on social media platforms to expand reach and showcase authentic Ilonggo cuisine.</p>
+      <p>The primary advertising strategy is to <strong>entertain and attract</strong>, leveraging partnerships with food vloggers and influencers on social media platforms to expand reach and showcase authentic Negrosanon's cuisine.</p>
   </div>
   <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1000">
       <i class="fas fa-trophy insight-icon"></i>
@@ -149,7 +149,7 @@
   <div class="insight-card" data-aos="zoom-in-up" data-aos-delay="1600">
       <i class="fas fa-users insight-icon"></i>
       <h4>Community & Cultural Impact</h4>
-      <p>The restaurant supports <strong>local farmers</strong>, preserves Ilonggo heritage, and serves as a culinary landmark that connects Bacolod’s culture with its people.</p>
+      <p>The restaurant supports <strong>local farmers</strong>, preserves Negrosanon's heritage, and serves as a culinary landmark that connects Bacolod’s culture with its people.</p>
   </div>
 </div><br><br><br><br><br>
 
@@ -284,7 +284,7 @@
       <div class="contact-content">
         <div class="contact-card">
           <h2 style="color: #E2A76F">Visit Us Today</h2>
-          <p>Experience the heartwarming soul of Ilonggo</p>      <p></p>cuisine for yourself. We look forward to welcoming you.</p>
+          <p>Experience the heartwarming soul of Negrosanon's</p>      <p></p>cuisine for yourself. We look forward to welcoming you.</p>
           <div class="contact-details">
             <p><i class="fas fa-map-marker-alt"></i> Bacolod City, Western Visayas</p>
             <p><i class="fas fa-envelope"></i> info@eronscansi.ph</p>
@@ -301,7 +301,7 @@
       <div class="footer-grid">
         <div class="footer-section" data-aos="fade-up">
           <h3>Eron's Cansi</h3>
-          <p>Preserving Ilonggo culinary traditions with love and pride.</p>
+          <p>Preserving Negrosanon's culinary traditions with love and pride.</p>
         </div>
         <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
           <h3>Quick Links</h3>
@@ -334,4 +334,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
-</html>
+  </html>
+          
